# DataTools

./: .readthedocs.yaml  README.md  README.rst  Untitled.ipynb  check_zarr_api.py  old_setup.py  pyproject.toml  requirements.txt  setup.py
.virtual_documents/: Untitled.ipynb
DataTools/: __init__.py
DataTools/DataFormats/: .loglogin  __init__.py  bmp2zarr.py  tiff2zarr.py  utils.py
DataTools/Facilities/: esrf2aps.py
DataTools/Globus/: io.py
DataTools/Notebooks/: GlobusReader.ipynb
DataTools/Notebooks/.ipynb_checkpoints/: GlobusReader-checkpoint.ipynb
DataTools/Physics/: abscalc.py
DataTools/Tools/: create_vol.py  polar_removal.py
datatools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: .gitignore  cli_tools.rst  conf.py  contributing.rst  index.rst  installation.rst
docs/_build/doctrees/: changelog.doctree  cli_tools.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/api/: dataformats.doctree  facilities.doctree  globus.doctree  physics.doctree  tools.doctree
docs/_build/html/: .buildinfo  changelog.html  cli_tools.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: changelog.rst.txt  index.rst.txt  usage.rst.txt
docs/_build/html/_sources/api/: dataformats.rst.txt  facilities.rst.txt  (+2 more)
docs/_build/html/api/: dataformats.html  facilities.html  globus.html  physics.html  tools.html
docs/api/: physics.rst
source/: conf.py
